--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "iobroker.template",
+  "name": "iobroker.countdown",
   "version": "0.0.1",
-  "description": "Template for adapter development",
+  "description": "Countdown",
   "author": {
-    "name": "Author",
-    "email": "author@mail.com"
+    "name": "Alexander Kolb",
+    "email": "blacksonj7@gmail.com"
   },
-  "homepage": "https://github.com/Author/ioBroker.template",
+  "homepage": "https://github.com/jack-blackson/ioBroker.countdown",
   "license": "MIT",
   "keywords": [
     "ioBroker",
-    "template",
+    "countdown",
     "Smart Home",
     "home automation"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Author/ioBroker.template"
+    "url": "https://github.com/jack-blackson/ioBroker.countdown/blob/master/package.json"
   },
   "dependencies": {
     "@iobroker/adapter-core": "^1.0.3"
@@ -52,7 +52,7 @@
     "lint:js": "eslint"
   },
   "bugs": {
-    "url": "https://github.com/Author/ioBroker.template/issues"
+    "url": "https://github.com/jack-blackson/ioBroker.countdown/issues"
   },
   "readmeFilename": "README.md"
 }
