--- a/package.json
+++ b/package.json
@@ -24,6 +24,14 @@
     }
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "commander": "^2.11.0",
+    "lodash.defaultto": "^4.14.0",
+    "lodash.groupby": "^4.6.0",
+    "lodash.isequal": "^4.5.0",
+    "loglevel": "^1.5.1",
+    "tplink-smarthome-crypto": "^1.0.0",
+    "tplink-smarthome-api": "^0.23.1",
     "@iobroker/adapter-core": "^1.0.3"
   },
   "devDependencies": {
