--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ os:
   - windows
 language: node_js
 node_js:
+  - '6'
   - '8'
   - '10'
   - '12'
@@ -11,11 +12,8 @@ before_script:
   - export NPMVERSION=$(echo "$($(which npm) -v)"|cut -c1)
   - 'if [[ $NPMVERSION == 5 ]]; then npm install -g npm@5; fi'
   - npm -v
-script:
-  - 'npm run test:unit'
-  - 'export DEBUG=testing:*'
-  - 'npm run test:integration'
-  - 'npm run test:package'
+  - npm install winston@3.2.1
+  - 'npm install https://github.com/ioBroker/ioBroker.js-controller/tarball/master --production'
 env:
   - CXX=g++-6
 addons:
@@ -23,4 +21,4 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - g++-6
+- g++-6
