--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lodash.isequal": "^4.5.0",
     "loglevel": "^1.5.1",
     "@iobroker/adapter-core": "^1.0.3",
-    "moment":"2.24.0"
+    "moment":"2.24.0",
+    "@iobroker/testing": "^1.2.0"
   },
   "scripts": {
     "test": "npm run test:package && npm run test:unit",
