--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "moment":"2.24.0",
+    "tableify": "^1.1.0",
     "@iobroker/testing": "^1.2.0",
     "@iobroker/adapter-core": "^1.0.3"
   },
