--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "name": "jack_blackson",
     "email": "blacksonj7@gmail.com"
   },
-  "keywords": ["Countdown","countdown"],
+  "keywords": [
+    "Countdown",
+    "countdown"
+  ],
   "license": "MIT",
   "homepage": "https://github.com/jack-blackson/ioBroker.countdown",
   "bugs": {
     "url": "https://github.com/jack-blackson/ioBroker.countdown/issues"
   },
   "dependencies": {
-    "moment":"2.24.0",
     "@iobroker/adapter-core": "^2.4.0",
+    "moment": "2.24.0",
     "tableify": "1.1.0"
   },
   "scripts": {
@@ -29,11 +32,10 @@
     "test:integration": "mocha test/integration --exit"
   },
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "mocha": "^7.2.0",
+    "@iobroker/testing": "^2.2.0",
     "chai": "^4.2.0",
-    "@iobroker/testing": "^2.2.0"
+    "gulp": "^4.0.2",
+    "mocha": "^7.2.0"
   },
-
   "readmeFilename": "README.md"
 }
