--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -135,7 +135,7 @@ jobs:
           export SENTRY_URL=https://sentry.iobroker.net
           export SENTRY_ORG=iobroker
           export SENTRY_PROJECT=iobroker-countdown
-          export SENTRY_VERSION=iobroker-countdown@${{ steps.extract_release.outputs.VERSION }}
+          export SENTRY_VERSION=iobroker.countdown@${{ steps.extract_release.outputs.VERSION }}
           sentry-cli releases new $SENTRY_VERSION
           sentry-cli releases finalize $SENTRY_VERSION
           sentry-cli releases set-commits $SENTRY_VERSION --auto
