--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.countdown",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Countdown",
   "main": "main.js",
   "repository": {
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@iobroker/testing": "^2.2.0",
+    "axios": ">=0.21.1",
     "chai": "^4.2.0",
     "gulp": "^4.0.2",
     "mocha": "^7.2.0"
