--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "test": "npm run test:package && npm run test:unit",
     "test:package": "mocha test/package --exit",
     "test:unit": "mocha test/unit --exit",
-    "test:integration": "mocha test/integration --exit"
+    "test:integration": "mocha test/integration --exit",
+    "translate": "translate-adapter"
   },
   "devDependencies": {
     "@iobroker/adapter-dev": "^1.2.0",
