--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "iobroker.countdown",
   "version": "2.2.1",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "description": "Countdown",
   "main": "main.js",
   "repository": {
@@ -13,7 +16,8 @@
   },
   "keywords": [
     "Countdown",
-    "countdown"
+    "countdown",
+    "ioBroker"
   ],
   "license": "MIT",
   "homepage": "https://github.com/jack-blackson/ioBroker.countdown",
@@ -21,10 +25,10 @@
     "url": "https://github.com/jack-blackson/ioBroker.countdown/issues"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.6.8",
+    "@iobroker/adapter-core": "^3.1.6",
     "@iobroker/testing": "^4.0.0",
-    "moment": "2.29.4",
-    "tableify": "1.1.1"
+    "moment": "^2.30.1",
+    "tableify": "^1.1.1"
   },
   "scripts": {
     "test": "npm run test:package && npm run test:unit",
@@ -35,6 +39,7 @@
   },
   "devDependencies": {
     "@iobroker/adapter-dev": "^1.2.0",
+    "@iobroker/testing":"4.1.3",
     "axios": ">=0.21.1",
     "chai": "^4.2.0",
     "gulp": "^4.0.2",
