--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@iobroker/adapter-dev": "^1.2.0",
-    "@iobroker/testing":"4.1.3",
+    "@iobroker/testing":"^4.1.3",
     "axios": ">=0.21.1",
     "chai": "^4.2.0",
     "gulp": "^4.0.2",
